# SistemasDistribuidos

./: README.md
10_cliente_UDP/: CMakeLists.txt  cliente  cliente2  programa10-1.c  programa9-1.c  server
5_static_STL_ver2/: CMakeLists.txt  Coordenada.cpp  Coordenada.h  Fecha.cpp  Fecha.h  PoligoIrregular.cpp  PoligoIrregular.h  Rectangulo.cpp  main.cpp  pushback  pushback1  reserve  reserve1
7_PythonComparacion/: main.py
7_strings/: CMakeLists.txt  charC++  main.cpp  numeros  numerosC  palabras.cpp  palabras.h  prueba.cpp  stringC++
8_threads_c++/: CMakeLists.txt  Semaforo.cpp  Semaforo.h  UDD  hilos  hilos1  hilos2  main.cpp  usoDiscoDuro.cpp
9_Servidor_de_dominio_udp/: CMakeLists.txt  main.cpp  programa  programa9-1.c
9_sockets_UDP/: CMakeLists.txt  PaqueteDatagrama.cpp  PaqueteDatagrama.h  PaqueteDatagrama.h.gch  SocketDatagrama.cpp  SocketDatagrama.h  SocketDatagrama.h.gch  main  main.cpp  makefile
9_threads/: CMakeLists.txt  DiscoDuro.cpp  DiscoDuro.h  dd  main.cpp  palabraPorPalabra.txt  palabras.cpp  prueba  prueba2
Hilos/: Semaforo.cpp  Semaforo.h  hilos1  hilos1.cpp  hilos2  hilos2.cpp  hilos3  hilos3.cpp  main.cpp  semaforo
Monopoly/: index.php
P9/: Makefile  SocketDatagrama.cpp  SocketDatagrama.h  cliente  servidor  (+2 more)
Proyecto1_Santuario1/: CMakeLists.txt  Coordenada.cpp  Coordenada.h  Criba.cpp  Criba.h  Fraccion.cpp  Fraccion.h  Luis_Fernando_Santuario_Parra_DSD_4CM2.txt  Numero.cpp  Numero.h  Numeros.cpp  Numeros.h  Ortoedro.cpp  Ortoedro.h  Rectangulo.cpp  Rectangulo.h  main.cpp  proyecto.cpp  proyecto.h  temperatura.cpp  temperatura.h
(+86 files in other folders)
