cmake_minimum_required(VERSION 3.14)
project(Proyecto1_Santuario1)

set(CMAKE_CXX_STANDARD 17)

add_executable(Proyecto1_Santuario1 main.cpp proyecto.h proyecto.cpp temperatura.h temperatura.cpp Fraccion.h Fraccion.cpp Coordenada.h Coordenada.cpp Rectangulo.h Rectangulo.cpp Ortoedro.cpp Ortoedro.h Criba.cpp Criba.h Numero.cpp Numero.h)